# EGT309-Team-Harish-Kanna

./: .dockerignore  .gitattributes  .gitignore  AI_Solution_Development_Case_Study_Ying_Ray_EDA.ipynb  AI_Solution_Development_EDA.ipynb  Development.Dockerfile  Dockerfile  Pipeline.Dockerfile  README.md  Zhexiang_Model_training.ipynb  dev.sh  development.docker-compose.yml  docker-compose.yml  dockerfile  makefile  pyproject.toml  requirements.txt  test.py
.github/workflows/: build_and_push_dockerfile.yml  copy_notebooks_to_main.yml  format_and_lint.yml  move_notebooks_to_notebook_folder.yml  python_format_and_lint.yml  sync-branch-to-main.yml  update_requirements_txt.yml  yaml_format_and_lint.yml
EDA/: AI_Solution_Development_Case_Study_Ying_Ray_EDA.ipynb  Jun_Hoe_eda.ipynb
backend/: .gitignore  main.py  pyproject.toml
backend/saved_models/RandomForestClassifier/: test_error.csv  test_error.json
backend/saved_models/XGBoostClassifier/: XGBoostClassifier_best_params.json  (+4 more)
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
conf/: logging.yml
conf/base/: catalog.yml  model_registry_config.yml  parameters_data_preparation.yml  parameters_execution_configuration.yml  parameters_kessokue_pipeline.yml  parameters_model_evaluation.yml  parameters_model_training.yml
flask/: main.py
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
github/workflows/: copy_notebooks_to_main.yml
notebooks/: AI_Solution_Development_Case_Study_Ying_Ray_EDA.ipynb  AI_Solution_Development_EDA.ipynb  EDA_Zhexiang.ipynb  Final_eda.html  Jun_Hoe_eda.ipynb  Zhexiang_Model_training.ipynb  eda.html  eda.ipynb
saved_models/AdaBoostClassifier/: AdaBoostClassifier.pkl  AdaBoostClassifier_best_params.json  AdaBoostClassifier_metrics.json
saved_models/CatBoostClassifier/: CatBoostClassifier.pkl  CatBoostClassifier_best_params.json  CatBoostClassifier_metrics.json
saved_models/LightGBMClassifier/: LightGBMClassifier.pkl  LightGBMClassifier_best_params.json  LightGBMClassifier_metrics.json
saved_models/RandomForestClassifier/: RandomForestClassifier_best_params.json  RandomForestClassifier_metrics.json
saved_models/SubmissionAdaBoostClassifier/: AdaBoostClassifier_metrics.json
saved_models/SubmissionCatBoostClassifier/: CatBoostClassifier.pkl  CatBoostClassifier_best_params.json  CatBoostClassifier_metrics.json
saved_models/SubmissionLightGBMClassifier/: LightGBMClassifier.pkl  LightGBMClassifier_metrics.json
saved_models/SubmissionRandomForestClassifier/: RandomForestClassifier_metrics.json
saved_models/SubmissionXGBoostClassifier/: XGBoostClassifier_metrics.json
saved_models/XGBoostClassifier/: XGBoostClassifier.pkl  XGBoostClassifier_best_params.json  XGBoostClassifier_metrics.json
src/egt309_pipeline/: __init__.py  __main__.py  hooks.py  model_template.py  model_template_utils.py  plotting_utils.py  settings.py
temp_dist/: index.html
temp_dist/assets/: index-Cs-0Wxg1.css  index-DYE9gM1A.js
temp_notebooks/: AI_Solution_Development_Case_Study_Ying_Ray_EDA.ipynb
visualisation-server/: Dockerfile  Visualisation-Server.Dockerfile  dockerfile  main.py
visualisation-server/vue-dist/: index.html
visualisation-server/vue_dist/: index.html
(+38 files in other folders)
