[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "egt309_pipeline"
readme = "README.md"
dynamic = [ "version",]
dependencies = [
 "ipython>=8.10",
 "jupyterlab>=3.0",
 "notebook",
 "kedro~=1.0.0",
 "pandas>=2.3.3",
 "polars>=1.35.2",
 "sqlalchemy>=2.0.44",
 "plotly==5.24.1",
 "pyarrow>=21.0.0",
 "pytest>=7.4.4",
 "numpy>=2.0.2",
 "kedro-viz>=12.1.0",
 "scikit-learn>=1.6.1",
 "imbalanced-learn>=0.12.4",
 "scikit-optimize>=0.10.2",
 "seaborn>=0.13.2",
 "joblib>=1.5.2",
 "xgboost>=2.1.4",
 "gputil>=1.4.0",
 "kedro-datasets>=4.1.0",
 "catboost>=1.2.8",
 "lightgbm>=4.6.0",
]

[project.scripts]
egt309-pipeline = "egt309_pipeline.__main__:main"

[project.optional-dependencies]
dev = [ "pytest-cov~=3.0", "pytest-mock>=1.7.1, <2.0", "pytest~=7.2", "ruff~=0.12.0",]

[tool.kedro]
package_name = "egt309_pipeline"
project_name = "egt309-pipeline"
kedro_init_version = "1.0.0"
tools = "['Linting', 'Testing', 'Custom Logging', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true

[project.entry-points."kedro.hooks"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov src/egt309_pipeline -ra"

[tool.coverage.report]
fail_under = 0
show_missing = true
exclude_lines = [ "pragma: no cover", "raise NotImplementedError",]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
ignore = [ "E501", "T201", "PLR2004", "E501"]

[tool.setuptools.dynamic.version]
attr = "egt309_pipeline.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "5a5c795011e04bec9922bdc383fffd6d"

